--- a/BugTrackerUI/wwwroot/css/site.css
+++ b/BugTrackerUI/wwwroot/css/site.css
@@ -1,7 +1,32 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;0,900;1,700;1,900&display=swap');
+
+:root {
+     --white: #FFFFFF;
+     --black: #000000;
+     --theme-teal: #07A899;
+}
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+     font-family: 'Montserrat', sans-serif;
+     font-weight: 900;
+     color: var(--black);
+}
+
+body {
+     background: url(../images/BugTrackerBackground.jpg) no-repeat center center fixed;
+     background-size: cover;
+     height: 100%;
+}
+
+h1 {
+     padding-top: 1rem;
 }
 
 h1:focus {
@@ -23,7 +48,7 @@ a, .btn-link {
 }
 
 .valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
+    /*outline: 1px solid #26b050;*/
 }
 
 .invalid {
@@ -62,4 +87,29 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+.page-heading {
+     text-align: center;
+}
+
+.bug-container {
+     display: flex;
+     justify-content: center;
+     margin-bottom: 3rem;
+}
+
+.bug-btn {
+     font-family: 'Montserrat', sans-serif;
+     border-width: 3px;
+     border-radius: 10px;
+     padding-left: 2rem;
+     padding-right: 2rem;
+     font-weight: 900;
+}
+
+.btn-outline-dark:hover {
+     color: var(--white);
+     background-color: var(--black);
+     border-color: var(--theme-teal);
+}
 
