finish styling heading, sort button, category and status select box

--- a/BugTrackerUI/Pages/Index.razor
+++ b/BugTrackerUI/Pages/Index.razor
@@ -334,7 +334,7 @@
      {
           if (isNew == isSortedByNew)
           {
-               return "sorted-selected";
+               return "sort-selected";
           }
           else
           {
