--- a/BugTrackerUI/Shared/LoginDisplay.razor
+++ b/BugTrackerUI/Shared/LoginDisplay.razor
@@ -1,19 +1,19 @@
 ﻿<AuthorizeView Policy="Admin">
-    <a href="/AdminAcceptance">
+    <a class="login-link" href="/AdminAcceptance">
         Admin
     </a>
 </AuthorizeView>
 <AuthorizeView>
     <Authorized>
-        <a href="/Profile">
+        <a class="login-link" href="/Profile">
             Profile
         </a>
-        <a href="MicrosoftIdentity/Account/SignOut">
+        <a class="login-link" href="MicrosoftIdentity/Account/SignOut">
             Logout
         </a>
     </Authorized>
     <NotAuthorized>
-        <a href="MicrosoftIdentity/Account/SignIn">
+        <a class="login-link" href="MicrosoftIdentity/Account/SignIn">
             Login
         </a>
     </NotAuthorized>
