--- a/BugTrackerUI/Pages/Index.razor
+++ b/BugTrackerUI/Pages/Index.razor
@@ -35,7 +35,7 @@
                     <div class="bug-entry">
                         <div class="@GetVoteClass(b)" @onclick="(() => VoteUp(b))">
                             <div class="text-uppercase">@GetUpvoteTopText(b)</div>
-                            <span class="oi oi-caret-top" style="font-size: 3rem;"></span>
+                            <span class="oi oi-caret-top entry-upvote"></span>
                             <div class="text-uppercase">@GetUpvoteBottomText(b)</div>
                         </div>
                         <div class="bug-entry-text">
