--- a/BugTrackerUI/wwwroot/css/site.css
+++ b/BugTrackerUI/wwwroot/css/site.css
@@ -419,7 +419,8 @@ text-decoration: none;
 .btn-main {
      color: var(--white);
      background-color: var(--theme);
-     padding-inline: 2rem;
+     padding-right: 2rem;
+     padding-left: 2rem;
      font-family: 'Montserrat', sans-serif;
      font-weight: 900;
      border-radius: 10px;
@@ -566,3 +567,77 @@ text-decoration: none;
 .bug-detail-owner-notes {
      padding-bottom: 20px;
 }
+
+/*ADMIN ACCEPTANCE*/
+.submission {
+     background-color: var(--white);
+     border-radius: 10px;
+     padding: 1rem;
+     margin-bottom: 1rem;
+}
+
+.btn-accept,
+.btn-reject {
+     width: 100%;
+     font-family: 'Montserrat', sans-serif;
+     border-radius: 10px;
+     border-width: 3px;
+}
+
+.btn-accept {
+     color: var(--white);
+     background-color: var(--status-resolved);
+     border-color: var(--white);
+}
+
+     .btn-accept:hover {
+          color: var(--status-resolved);
+          background-color: var(--white);
+          border-color: var(--status-resolved);
+     }
+
+.btn-reject {
+     color: var(--white);
+     background-color: var(--status-closed);
+     border-color: var(--white);
+}
+
+     .btn-reject:hover {
+          color: var(--status-closed);
+          background-color: var(--white);
+          border-color: var(--status-closed);
+     }
+
+.acceptance-edit-form {
+     display: flex;
+}
+
+.acceptance-edit-field {
+     flex: 1;
+     border-radius: 10px;
+}
+
+.submission-edit-accept {
+     color: var(--status-resolved);
+}
+
+     .submission-edit-accept:hover {
+          font-weight: 700;
+     }
+
+.submission-edit-reject {
+     color: var(--status-closed);
+}
+
+     .submission-edit-reject:hover {
+          font-weight: 700;
+     }
+
+.submission-edit-icon {
+     padding-left: 1rem;
+     padding-right: 1rem;
+}
+
+     .submission-edit-icon:hover {
+          color: var(--status-open);
+     }
